slightly modified login screen css. cropped bg image so that it centers correctly.

--- a/css/style.css
+++ b/css/style.css
@@ -1,43 +1,43 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-/*************      Login Page   *****************/
 body{
-    background: url(../images/physicianLoginScreen.png) no-repeat;
+    background: url(../images/physicianLoginScreen_cropped.png) no-repeat;
     background-size: cover;
     background-attachment: fixed;
     background-position-x: center;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-family: sans-serif;
+    font-family: "Montserrat", sans-serif;
     height: 100vh;
     width: 100vw;
 }
 
+/*************      Login Page   *****************/
 .container{
-
     position: relative;
     margin-top: 10%;
     width: 460px;
     height: auto;
-    background: #dedede;
-    border-radius: 5px;
-    outline: black;
-
+    background: rgba(255, 255, 255, 0.5);
+    border-radius: 30px;
+    border: 1px solid rgba(255, 255, 255, 0.7);
+    backdrop-filter: blur(10px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
 }
 
 .label{
-
     padding: 20px 100px;
     font-size: 35px;
     font-weight: bold;
     color: #130f40;
     white-space: nowrap;
-
 }
 
 .loginForm{
@@ -76,7 +76,7 @@ body{
     cursor: pointer;
     font-weight: bold;
     background: #22179a;
-    border-radius: 3px;
+    border-radius: 15px;
     border: 1px solid #22179a;
     transition: .5s;
 }
